# BotCalendar2

./: .env.docker  .gitignore  Dockerfile.bot  Dockerfile.django  README.md  appointment_utils.py  bot.py  botINFO.txt  bot_stats.py  database.py  docker-compose.yml  mycalendar.py  notes.py  profile_utils.py  project_dump.txt  pyproject.toml  pytest.ini  pytest.unit.ini  secrets.py  test_bot_integration.py  test_bot_logic.py  test_simple.py
calendar_admin/calendar_admin/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
calendar_admin/events/: admin.py  api_urls.py  api_views.py  models.py  serializers.py
calendar_admin/events/migrations/: 0001_initial.py  0002_botstatistics.py  0003_alter_botstatistics_options_appointment.py  0004_alter_botstatistics_options_event_details_event_user_and_more.py  0005_alter_appointment_options_and_more.py
calendar_admin/events/tests_django/: conftest.py  test_api.py  test_models.py
tests/: conftest.py  test_bot_commands.py  test_bot_commands_edge_cases.py  test_utils.py
tests/unit/: test_calendar_simple.py  test_notifications.py  test_utils_simple.py
