[project]
name = "botcalendar2"
version = "0.1.0"
description = "Telegram bot with calendar for notes"
authors = [
    {name = "Clavker", email = "Clavker.Fust@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
test = "pytest tests/unit -v"
test-all = "pytest"
test-django = "bash -c 'DJANGO_SETTINGS_MODULE=calendar_admin.settings_test pytest calendar_admin/events/tests_django -v'"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests/unit",
    "calendar_admin/events/tests_django"
]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.26.0"
pytest-django = "^4.12.0"
pytest-mock = "^3.15.1"